# diplo-ai-be

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  test_litellm.py  test_sim.py
.github/workflows/: ci.yml
backend/: account.py  agent.py  auth.py  auth_store.py  byok.py  email_templates.py  eval_log.py  game_engine.py  game_store.py  log_backend.py  main.py  policies.py  rate_limit.py
config/: policies.json
docs/: glossary.md
scripts/: browser_check.py  debug_sea.py  eval.py  finish_turn.py  list_users.py  screenshot_only.py  set_admin.py  snap_active.py  snap_dialog.py  snap_tabs.py  snap_themes.py  snap_unit.py
tests/: conftest.py  test_agent_retry.py  test_auto_error.py  test_game_lifecycle.py  test_game_ownership.py  test_jwt_secret.py  test_rate_limit.py  test_refund.py  test_usage.py  test_visibility.py
