[project]
name = "diploai"
version = "0.1.0"
description = "LLM agents play classic Diplomacy against each other"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=4.2.0",
    "diplomacy>=1.1.2",
    "email-validator>=2.2.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.0",
    "litellm>=1.85.0",
    # Pinned explicitly (FastAPI brings starlette transitively, but older
    # versions had the CORS-headers-missing-on-500 quirk; keep us current).
    "starlette>=1.2.1",
    "pydantic>=2.13.4",
    "pyjwt>=2.10.0",
    "pymongo>=4.10.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.47.0",
    "websockets>=16.0",
    "cryptography>=48.0.0",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "playwright>=1.59.0",
    "poethepoet>=0.46.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
# asyncio_mode=auto lets us write `async def test_foo()` without decorating
# each test — pytest-asyncio picks them up automatically.
asyncio_mode = "auto"

# ──────────────────────────────────────────────────────────────────────────────
# Task runner — invoke with `uv run poe <task>` or just `poe <task>` once the
# project's .venv is activated. See docs/glossary.md for terminology.
# ──────────────────────────────────────────────────────────────────────────────
[tool.poe.tasks]

# ── Dev server ────────────────────────────────────────────────────────────────
dev        = "uvicorn backend.main:app --reload --port 8421"
dev-remote = { env = { MONGODB_URI = "${RAILWAY_MONGODB_URI}" }, cmd = "uvicorn backend.main:app --reload --port 8421" }

# ── Local MongoDB via Podman ──────────────────────────────────────────────────
# First time on a new macOS box:
#   poe podman:init
#   poe podman:start
# Then:
#   poe db:up   # starts local Mongo on :27017
"podman:init"  = "podman machine init"
"podman:start" = "podman machine start"
"podman:stop"  = "podman machine stop"

"db:up"      = "podman run -d --name diploai-mongo -p 27017:27017 -v diploai-mongo-data:/data/db docker.io/library/mongo:7"
"db:down"    = { shell = "podman stop diploai-mongo && podman rm diploai-mongo" }
"db:restart" = ["db:down", "db:up"]
"db:wipe"    = { shell = "podman stop diploai-mongo 2>/dev/null; podman rm diploai-mongo 2>/dev/null; podman volume rm diploai-mongo-data 2>/dev/null; podman run -d --name diploai-mongo -p 27017:27017 -v diploai-mongo-data:/data/db docker.io/library/mongo:7" }
"db:shell"   = "podman exec -it diploai-mongo mongosh diploai"
"db:logs"    = "podman logs -f diploai-mongo"
"db:status"  = "podman ps --filter name=diploai-mongo"

# ── Quality ───────────────────────────────────────────────────────────────────
lint   = "ruff check backend tests"
format = "ruff format backend tests"
test   = "pytest"

# ── Bootstrap (first-time setup once Podman is initialised) ───────────────────
setup = ["db:up"]


# ──────────────────────────────────────────────────────────────────────────────
# Ruff
#
# main.py deliberately calls logging.basicConfig() before importing modules
# that build their own loggers at import time, so its imports can't all live
# at the top of the file.
# ──────────────────────────────────────────────────────────────────────────────
[tool.ruff.lint.per-file-ignores]
"backend/main.py" = ["E402"]
